--- a/SDL_GetScancodeFromKey.mediawiki
+++ b/SDL_GetScancodeFromKey.mediawiki
@@ -8,17 +8,17 @@ Use this function to get the scancode corresponding to the given key code accord
 
 == Syntax ==
 ```c++
-SDL_scancode SDL_GetScancodeFromKey(SDLKey key)
+SDL_scancode SDL_GetScancodeFromKey(SDL_Keycode key)
 ```
 
 == Function Parameters ==
 {|
 |'''key'''
-|the desired [[SDLKey]] to query ???
+|the desired [[SDL_Keycode]] to query ???
 |}
 
 == Return Value ==
-Returns the [[SDL_scancode]] that corresponds to the given [[SDLKey]]. ???
+Returns the [[SDL_Scancode]] that corresponds to the given [[SDL_Keycode]]. ???
 
 == Code Examples ==
 ```c++
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-See [[SDL_scancode]] for details. 
+See [[SDL_Scancode]] for details. 
 
 == Related Functions ==
 :[[SDL_GetKeyFromScancode]] ???
