--- a/SDL_Scancode.mediawiki
+++ b/SDL_Scancode.mediawiki
@@ -756,7 +756,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-^Values of this type are used to represent the physical location of a keyboard key on the keyboard.  This is correlated to the [[SDL_Key]] associated with that location to give a key press meaning.^
+^Values of this type are used to represent the physical location of a keyboard key on the keyboard.  This is correlated to the [[SDL_Keycode]] associated with that location to give a key press meaning.^
 
 ^These are used in many places, including ^,,Values of this type are used to represent keyboard keys, among other places ,,in the <code>SDL_keysym::scancode</code> <code>key.keysym.scancode</code> field of the [[SDL_Event]] structure.
 
@@ -765,7 +765,7 @@ The values in this enumeration are based on the USB usage page standard:
 
 
 == Related Enumerations ==
-:[[SDL_Key]]
+:[[SDL_Keycode]]
 
 == Related Functions ==
 :[[SDL_GetKeyboardState]]
