--- a/CategoryKeyboard.mediawiki
+++ b/CategoryKeyboard.mediawiki
@@ -12,7 +12,9 @@
 
 == Introduction ==
 
-This category contains functions for handling keyboard inputs.  SDL uses two different types of values to represent keys on the keyboard - scancode and keycode.
+This category contains functions for handling keyboard inputs.  
+
+SDL uses two different types of values to represent keys on the keyboard - scancode and keycode.
 
 [[SDL_Scancode]] values are used to represent the physical location of a keyboard key on the keyboard. Values of this type are used to represent keyboard keys in the <code>key.keysym.scancode</code> field of the [[SDL_Event]] structure, among other places. The values in the [[SDL_Scancode]] enumeration are based on the USB usage page standard (http://www.usb.org/developers/devclass_docs/Hut1_12.pdf).
 
