--- a/SDL_ScancodeAndKeycode.mediawiki
+++ b/SDL_ScancodeAndKeycode.mediawiki
@@ -495,8 +495,7 @@ Enumerations of the SDL physical (scancode) and virtual (keycode) key representa
 |-
 |SDL_SCANCODE_KP_DBLVERTICALBAR
 |SDLK_KP_DBLVERTICALBAR
-|"'''Keypad &#124;&#124;'''" (the 
-| key (numeric keypad))
+|"'''Keypad &#124;&#124;'''" (the &#124;&#124; key (numeric keypad))
 |-
 |SDL_SCANCODE_KP_DECIMAL
 |SDLK_KP_DECIMAL
@@ -632,7 +631,7 @@ Enumerations of the SDL physical (scancode) and virtual (keycode) key representa
 |-
 |SDL_SCANCODE_KP_VERTICALBAR
 |SDLK_KP_VERTICALBAR
-|"'''Keypad &#124;'''" (the | key (numeric keypad))
+|"'''Keypad &#124;'''" (the &#124; key (numeric keypad))
 |-
 |SDL_SCANCODE_KP_XOR
 |SDLK_KP_XOR
@@ -688,7 +687,7 @@ Enumerations of the SDL physical (scancode) and virtual (keycode) key representa
 |-
 |SDL_SCANCODE_MODE
 |SDLK_MODE
-|"'''ModeSwitch'''" (I'm not sure if this is really not covered by any of the above, but since there's a special KMOD_MODE for it I'm adding it here)
+|"'''ModeSwitch'''" (I&#39;m not sure if this is really not covered by any of the above, but since there&#39;s a special KMOD_MODE for it I&#39;m adding it here)
 |-
 |SDL_SCANCODE_MUTE
 |SDLK_MUTE
@@ -984,7 +983,7 @@ Enumerations of the SDL physical (scancode) and virtual (keycode) key representa
 |-
 |SDL_SCANCODE_NONUSHASH
 |''(none)''
-|"'''#'''" (ISO USB keyboards actually use this code instead of 49 for the same key, but all OSes I've seen treat the two codes identically. So, as an implementor, unless your keyboard generates both of those codes and your OS treats them differently, you should generate SDL_SCANCODE_BACKSLASH instead of this code. As a user, you should not rely on this code because SDL will never generate it with most (all?) keyboards.)
+|"'''#'''" (ISO USB keyboards actually use this code instead of 49 for the same key, but all OSes I&#39;ve seen treat the two codes identically. So, as an implementor, unless your keyboard generates both of those codes and your OS treats them differently, you should generate SDL_SCANCODE_BACKSLASH instead of this code. As a user, you should not rely on this code because SDL will never generate it with most (all?) keyboards.)
 |-
 |
 |
